<resources>
    <string name="app_name">Pulse</string>
    <string name="phone_no">Phone No</string>
    <string name="phone_no1">Phone No</string>
    <string name="password">Password</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="specialization">Specialization</string>
    <string name="details">Details</string>
    <string name="service">Service</string>
    <string name="blog">Blog</string>
    <string name="location_base">Location base</string>
    <string name="describe_problem">Describe problem</string>
    <string name="reg">Registration</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="name">Full Name</string>
    <string name="email">E-mail Address</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="doc_instruction_login">Log in or create an account for patient\'s treatment at your flexible plan</string>
    <string name="my_pulse">Patient</string>
    <string name="patient_instruction">Log in or create My Pulse account to get doctor\'s consultation at your flexibility</string>
    <string name="ok">ok</string>
    <string name="sample_string">sdfjlklksdjf</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_30">30%</string>
    <string name="lbl_disease_symptom">Write down your symptom of the disease</string>
    <string name="dot">...................................</string>
    <string name="profile">profile</string>
    <string name="doc_profileInfo">Personal Information</string>
    <string name="doc_chamberInfo">Chamber Information</string>
    <string name="doc_bankInfo">Bank Information</string>
    <string name="doc_today">Today\'s Appointment</string>
    <string name="doc_patientList">Existing patient List</string>
    <string name="doc_labReport">Review Lab Reports</string>
    <string name="doc_healthFeed">Health Feed</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="present_address">Present Address</string>
    <string name="health">Health</string>
    <string name="weight">Weight</string>
    <string name="bp">BP (upper/lower)</string>
    <string name="family_disease_history">Family Disease History</string>
    <string name="existing_medical_report">Existing Medical Report</string>
    <string name="specialist_tag">Specialist Tag</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="call_charges">Call Charges</string>
    <string name="_1200bdt">1200 BDT</string>
    <string name="available_time">Available Time</string>
    <string name="pick_time_n_date">Pick Time &amp; Date</string>
    <string name="book_reason_not_provided">Book Reason not Provided</string>
    <string name="continu">Continue</string>
    <string name="change_mobile_no">Change Mobile No</string>
    <string name="verify_n_continue">Verify &amp; Continue</string>
    <string name="enter_access_number">Enter Access Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="nationality">Nationality</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="terms_N_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacyNpolicy">Privacy Policy</string>
    <string name="otp_info">The system will send you an one time password to verify provided phone number</string>
    <string name="lable">By continuing you confirm that you accept our</string>

    <string name="findings">Findings</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>
    <string name="login_using_facebook">Login using FaceBook</string>
    <string name="login_registration_as">Login / Registration As</string>
    <string name="death_of_birth">Date of Birth</string>
    <string name="consultation_charge">Consultation Charge</string>
    <string name="doc_otp_msg">Pulse verification code :</string>
    <string name="reasonLabel">Reason For the Appointment</string>
    <string name="family_member_profile">Family members Profile</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account_login">Already have an account ! Login</string>
    <string name="app_logo">app_logo</string>
    <string name="height">Height</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="total_amount_payable">Total Amount Payable :</string>
    <string name="proceed_to_pay">Proceed to Pay</string>

    <!-- 02 Select Login or Registration strings -->

    <string name="ek_img_content">PSD Image</string>
    <string name="sign_in_register_as_string">Sign in / Register as:</string>
    <string name="patient_1_string">Patient</string>
    <string name="doctor_1_string">Doctor</string>


    <!--Facebook SDK id-->
    <!--    <string name="facebook_app_id">174854333152076</string>
    <string name="fb_login_protocol_scheme">fb174854333152076</string>-->
    <string name="facebook_app_id">1250062438457138</string>
    <string name="fb_login_protocol_scheme">fb1250062438457138</string>


    <string name="prescription">Prescription</string>


</resources>
