<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_doc_appointment"
            android:icon="@drawable/ic_menu_date_range"
            android:title="@string/appointment" />
        <item
            android:id="@+id/nav_doc_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/doc_profileInfo" />
        <item
            android:id="@+id/nav_doc_chamber"
            android:icon="@drawable/ic_menu_business"
            android:title="@string/doc_chamberInfo" />
        <item
            android:id="@+id/nav_doc_bank"
            android:icon="@drawable/ic_account_balance"
            android:title="@string/doc_bankInfo" />
        <item
            android:id="@+id/nav_doc_today"
            android:icon="@drawable/ic_menu_time"
            android:title="@string/doc_today" />

        <item
            android:id="@+id/nav_doc_existing_patient"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/doc_patientList" />
<!--
        <item
            android:id="@+id/nav_doc_lab_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/doc_labReport" />-->

        <item
            android:id="@+id/nav_doc_health_feed"
            android:icon="@drawable/ic_menu_heartbeat"
            android:title="@string/doc_healthFeed" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_exit_to_app"
            android:title="@string/logout" />
    </group>



</menu>
