<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.electrocraft.nirzo.pluse.view.fragment.PtSpecializationFragment">


    <RelativeLayout style="@style/container_style_2">


        <Button
            android:id="@+id/btn_ptn_healthProfile"
            style="@style/general_button_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:text="@string/save" />


        <!--Spinner-->
        <RelativeLayout

            android:id="@+id/spinner_layout"
            style="@style/spinner_border_style"
            android:layout_below="@+id/tvLabel"
            android:layout_marginBottom="12dp">

            <Spinner
                android:paddingLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/spBloodGroup"
                android:background="@drawable/spinner" />

        </RelativeLayout>



        <EditText android:layout_marginBottom="12dp"
            style="@style/edit_text_style_1"
            android:id="@+id/edtWeight"

            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner_layout"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number" />



        <EditText android:layout_marginBottom="12dp"
            style="@style/edit_text_style_1"
            android:id="@+id/edtHeight"

            android:layout_alignParentStart="true"
            android:layout_below="@+id/edtWeight"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number" />


        <EditText android:layout_marginBottom="12dp"
            style="@style/edit_text_style_1"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:id="@+id/edtBp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/edtHeight"
            android:ems="10"
            android:hint="@string/bp"
            android:inputType="text" />


        <EditText
            style="@style/edit_text_style_1"
            android:layout_marginBottom="12dp"
            android:id="@+id/edtFamilyDiseaseHistory"

            android:layout_alignParentEnd="true"
            android:layout_below="@+id/edtBp"
            android:ems="10"
            android:hint="@string/family_disease_history"
            android:inputType="text" />


        <EditText
            style="@style/edit_text_style_1"
            android:id="@+id/edtExistingMedicalReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/edtFamilyDiseaseHistory"
            android:ems="10"
            android:hint="@string/existing_medical_report"
            android:inputType="textPersonName"
            android:visibility="gone" />

    </RelativeLayout>

</FrameLayout>
