<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.electrocraft.nirzo.pluse.view.fragment.PtSpecializationFragment">


    <RelativeLayout style="@style/container_style_2">


        <Button
            android:id="@+id/btn_PtPersonalInfoSave"
            style="@style/general_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/save" />

        <EditText
            android:id="@+id/edtPtFatherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:ems="10"
            android:hint="@string/father_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtPtMotherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edtPtFatherName"
            android:ems="10"
            android:hint="@string/mother_name"
            android:inputType="textPersonName" />

        <!--  <EditText
              android:id="@+id/edtPtDeathOfBirth"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"

              android:ems="10"
              android:hint="DOB"
              android:inputType="date" />-->
        <RelativeLayout
            android:id="@+id/rl"
            style="@style/date_picker_container_style"


            android:layout_below="@+id/edtPtMotherName"

            >


            <TextView
                android:id="@+id/tvPatientDOB"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/death_of_birth"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/input_label_hint"
                android:textSize="14sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvPtAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rl"
            android:layout_marginTop="17dp"
            android:text="Age" />

        <EditText
            android:id="@+id/edtPtPresentAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvPtAge"

            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/present_address"
            android:inputType="textPersonName" />

    </RelativeLayout>

</FrameLayout>
