<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.electrocraft.nirzo.pluse.view.LoginActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/appbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="170dp"
                android:ems="10"
                android:hint="@string/phone_no"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="41dp"
                android:background="@drawable/login_ripple_effect"
                android:onClick="onLoginClick"
                android:text="Login"
                android:textColor="@color/color_white" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editText2"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_marginBottom="72dp"
                android:layout_marginLeft="48dp"
                android:layout_marginStart="48dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/doctor" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/patient" />
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:onClick="onRegistrationClick"
                android:text="@string/registration" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:text="@string/forget_password"
                android:textColor="@color/royal_blue"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
