<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.electrocraft.nirzo.pluse.view.activity.patient.SexNDobRegActivity">

    <include layout="@layout/appbar_layout" />

    <ImageView
        android:id="@+id/imgFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="128dp"
        app:srcCompat="@drawable/ic_female" />

    <ImageView
        android:id="@+id/imgMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imgFemale"
        android:layout_marginEnd="130dp"
        app:srcCompat="@drawable/ic_male" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgFemale"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rbtnFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rbtnMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgFemale"
        android:layout_alignStart="@+id/imgFemale"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="36dp"
        android:text="@string/age" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/textView2"
        android:ems="10"
        android:hint=""
        android:inputType="date" />

    <Button
        android:id="@+id/btn_pt_reg_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:text="Submit" />
</RelativeLayout>
